--- a/src/pages/Account/index.scss
+++ b/src/pages/Account/index.scss
@@ -146,7 +146,10 @@
     background: var(--color-layer-light);
     border-radius: 15px;
     .account-nologin-content-text {
-      font-size: 18px;
+      font-size: 17px;
+    }
+    .account-nologin-content-text +.account-nologin-content-text {
+      margin-top: 30px;
     }
     .account-nologin-content-btns {
       margin-top: 40px;
@@ -272,6 +275,13 @@
     padding: 40px 10px;
     .account-nologin-content {
       padding: 50px 20px;
+      .account-nologin-content-text {
+        font-size: 14px;
+        line-height: 20px;
+      }
+      .account-nologin-content-text + .account-nologin-content-text{
+        margin-top: 15px;
+      }
     }
   }
 }
