style: explore filters

--- a/src/pages/Explore/index.scss
+++ b/src/pages/Explore/index.scss
@@ -172,6 +172,7 @@
       // .ant-form-item{
       //   display: block;
       // }
+      background-color: var(--color-layer-light);
       .ant-form-item{
         display: block;
         font-size: 12px;
