--- a/src/components/AlertTip/index.scss
+++ b/src/components/AlertTip/index.scss
@@ -1,7 +1,14 @@
 .form-alert {
   max-width: 660px;
-  margin: 0 auto;
-  transform: translateX(-5px);
+  margin: 20px auto 0;
   background-color: rgba(202, 249, 130, 0.7);
   padding: 10px;
+  .ant-alert-content {
+    padding-top: 10px;
+  }
+  .ant-alert-close-icon {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+  }
 }
