fix: importAssets search

--- a/src/pages/ImportAssets/index.scss
+++ b/src/pages/ImportAssets/index.scss
@@ -113,6 +113,7 @@
           display: flex;
           align-items: center;
           padding-left: 10px;
+          justify-content: center;
         }
       }
     }
