--- a/src/pages/Withdraw/comps/WithdrawForm.scss
+++ b/src/pages/Withdraw/comps/WithdrawForm.scss
@@ -9,6 +9,18 @@
     width: 111px;
     max-width: 50%;
     text-align: center;
+    &-test {
+      position: absolute;
+      right: -10px;
+      top: -10px;
+      height: 18px;
+      line-height: 18px;
+      border-radius: 5px;
+      padding: 0 5px;
+      font-size: 12px;
+      background-color: var(--color-yellow);
+      color: var(--color-text-light);
+    }
   }
   .deposit-plat {
     padding-left: 10px;
