--- a/src/components/Modals/index.scss
+++ b/src/components/Modals/index.scss
@@ -88,6 +88,12 @@
     .about-modal-content{
       padding: 0 50px;
     }
+    .about-modal-content-info{
+      margin-top: 20px;
+      font-size: 16px;
+      color: #ccc;
+      text-align: justify;
+    }
     .about-num{
       display: inline-block;
       width: 26px;
@@ -102,7 +108,7 @@
   .ant-modal-footer{
     text-align: center;
     .ant-btn{
-      margin-top: 10px;
+      margin-top: 20px;
       width: 180px;
       height: 40px;
       margin-bottom: 20px;
