--- a/src/pages/Marketplace/comps/Market/index.scss
+++ b/src/pages/Marketplace/comps/Market/index.scss
@@ -34,11 +34,13 @@
     }
   }
 }
-.ant-modal-header,.ant-modal-title {
-  width:100%;
-}
-.ant-modal-header {
-  border-bottom:1px solid var(--color-border-lighter);
+.nostrswap-modal{
+  .ant-modal-header,.ant-modal-title {
+    width:100%;
+  }
+  .ant-modal-header {
+    border-bottom:1px solid var(--color-border-lighter);
+  }
 }
 .market-form-title {
   padding-bottom:10px;
