--- a/src/pages/Account/comps/AddressBook/index.scss
+++ b/src/pages/Account/comps/AddressBook/index.scss
@@ -10,11 +10,11 @@
     text-align: center;
     padding-top: 30px;
   } 
-  .add-addres-btn-box{
+  .add-address-btn-box{
     text-align: center;
     // padding: 20px 0;
     margin-top: 30px;
-    .add-addres-btn{
+    .add-address-btn{
       min-width: 180px;
     } 
   }
