--- a/src/components/Modals/index.scss
+++ b/src/components/Modals/index.scss
@@ -94,6 +94,9 @@
       color: #ccc;
       text-align: justify;
     }
+    .about-modal-content-title{
+      font-size: 16px;
+    }
     .about-num{
       display: inline-block;
       width: 26px;
@@ -112,6 +115,51 @@
       width: 180px;
       height: 40px;
       margin-bottom: 20px;
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  .import-asset-about-modal {
+    .ant-modal-header{
+      background-color: #1C232B;
+      .ant-modal-title{
+        font-size: 18px;
+        text-align: center;
+      }
+    }
+    .ant-modal-content{
+      background-color: #1C232B;
+      .about-modal-content{
+        padding: 0;
+      }
+      .about-modal-content-info{
+        margin-top: 20px;
+        font-size: 12px;
+        color: #ccc;
+        text-align: left;
+      }
+      .about-modal-content-title{
+        font-size: 13px;
+      }
+      .about-num{
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        line-height: 20px;
+        background-color: var(--color-green-light);
+        border-radius: 20px;
+        margin-right: 8px;
+      }
+    }
+    .ant-modal-footer{
+      text-align: center;
+      .ant-btn{
+        margin-top: 20px;
+        width: 180px;
+        height: 40px;
+        margin-bottom: 20px;
+      }
     }
   }
 }
