--- a/src/pages/ImportAssets/index.scss
+++ b/src/pages/ImportAssets/index.scss
@@ -2,6 +2,7 @@
   width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  max-width: 100%;
   .import-asset-back{
     margin-top: 20px;
     display: inline-block;
@@ -14,6 +15,7 @@
     padding: 30px;
     border-radius: 10px;
     position: relative;
+    
     .import-asset-content-about{
       position: absolute;
       top: 24px;
@@ -38,13 +40,17 @@
       align-items: center;
       justify-content: center;
       margin-top: 20px;
+      font-size: 12px;
+      padding: 0 100px;
       .ant-input{
-        width: 800px;
+        width: calc(100% - 10px);
         margin-left: 10px;
+        flex: 1;
       }
     }
     .relative {
       position: relative;
+      flex: 1;
     }
     .import-asset-content-sync{
       position: absolute;
@@ -57,7 +63,8 @@
       }
     }
     .import-asset-list{
-      padding: 50px 50px 20px;
+      padding: 50px 10px 20px;
+      overflow-x: auto;
       .import-asset-list-empty{
         width: 65%;
         margin: 0 auto;
@@ -101,9 +108,13 @@
         .import-asset-item-logo{
           width: 80px;
         }
+        .import-asset-item-name{
+          width: 130px;
+        }
         .import-asset-item-type{
           width: 160px;
         }
+        
         .import-asset-item-section{
           flex: 1;
         }
@@ -128,6 +139,158 @@
           align-items: center;
           padding-left: 10px;
           justify-content: center;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  .import-asset-container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 20px 10px;
+    max-width: 100%;
+    .import-asset-back{
+      margin-top: 0;
+      display: inline-block;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    .import-asset-content{
+      margin-top: 20px;
+      background: var(--color-layer-light);
+      padding: 20px 10px;
+      border-radius: 10px;
+      position: relative;
+      .import-asset-content-about{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 10px;
+        .sync-link{
+          color: var(--color-green-light);
+          cursor: pointer;
+        }
+      }
+      
+      .import-asset-title{
+        margin-top: 10px;
+        font-size: 18px;
+        font-weight: bold;
+        text-align: center;
+      }
+      .import-asset-subtitle{
+        margin-top: 10px;
+        text-align: center;
+        font-size: 12px;
+      }
+      .import-asset-search{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+        font-size: 12px;
+        padding: 0;
+        .ant-input{
+          width: calc(100% - 10px);
+          margin-left: 10px;
+          flex: 1;
+        }
+      }
+      .relative {
+        position: relative;
+        flex: 1;
+      }
+      .import-asset-content-sync{
+        position: absolute;
+        bottom: -24px;
+        right: 0;
+        text-align: right;
+        .sync-link{
+          color: var(--color-green-light);
+          cursor: pointer;
+        }
+      }
+      .import-asset-list{
+        padding: 40px 10px 20px;
+        // min-width: 800px;
+        width: 100%;
+        overflow-x: auto;
+        .import-asset-list-empty{
+          width: 65%;
+          margin: 0 auto;
+          text-align: center;
+          svg{
+            g{
+              g{
+                stroke: #ccc
+              }
+            }
+          }
+        }
+        .import-asset-item{
+          min-width: 700px;
+          margin-top: 10px;
+          // background: #303032;
+          padding: 10px;
+          border-radius: 10px;
+          border: 1px solid var(--color-border-grey);
+          height: auto;
+          transition: height 1s ease;
+          &:hover{
+            border: 1px solid rgba(62,232,181, .4);
+            .import-asset-item-detail{
+              display: block;
+            }
+          }
+          .import-asset-item-base{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: auto;
+            transition: height 1s ease;
+          }
+          >span{
+            display: flex;
+            flex: 3;
+          }
+          .import-asset-item-detail{
+            display: none;
+          }
+          .import-asset-item-logo{
+            width: 80px;
+          }
+          .import-asset-item-name{
+            width: 130px;
+          }
+          .import-asset-item-type{
+            width: 130px;
+          }
+          .import-asset-item-section{
+            flex: 1;
+          }
+          .import-asset-item-section-label{
+            display: flex;
+            align-items: center;
+            .ant-typography{
+              margin-bottom: 0;
+              margin-left: 0;
+              font-weight: bold;
+              font-size: 16px;
+            }
+          }
+          .import-asset-item-section-value{
+            margin-top: 5px;
+            font-weight: bold;
+          }
+          .import-asset-item-section-btn{
+            width: 140px;
+            min-height: 30px;
+            display: flex;
+            align-items: center;
+            padding-left: 10px;
+            justify-content: center;
+          }
         }
       }
     }
