--- a/src/components/Modals/index.scss
+++ b/src/components/Modals/index.scss
@@ -86,13 +86,13 @@
   .ant-modal-content{
     background-color: #1C232B;
     .about-modal-content{
-      padding: 0 50px;
+      padding: 0 30px;
     }
     .about-modal-content-info{
       margin-top: 20px;
       font-size: 16px;
       color: #ccc;
-      text-align: justify;
+      // text-align: justify;
     }
     .about-modal-content-title{
       font-size: 16px;
