--- a/src/pages/ImportAssets/comps/ImportModal/index.scss
+++ b/src/pages/ImportAssets/comps/ImportModal/index.scss
@@ -5,7 +5,7 @@
   }
   .import-asset-form{
     // margin-top: 20px;
-    padding: 20px;
+    padding: 10px 20px 20px;
   }
 }
 @media screen and (max-width: 768px) {
