--- a/src/pages/Mint/MintList/index.scss
+++ b/src/pages/Mint/MintList/index.scss
@@ -67,53 +67,9 @@
       // }
     }
   }
-}
-.token-address-tooltip {
-  max-width: 500px;
-}
-.import-assets-warning {
-  .ant-modal-confirm-title {
-    color: var(--color-text-base);
-  }
-  .ant-modal-content {
-    background-color: #1c232b;
-    .about-modal-content {
-      padding: 0 50px;
-    }
-    .about-modal-content-info {
-      margin-top: 20px;
-      font-size: 16px;
-      color: #ccc;
-      text-align: justify;
-    }
-    .anticon-exclamation-circle {
-      display: none;
-    }
-    .about-num {
-      display: inline-block;
-      width: 26px;
-      height: 26px;
-      text-align: center;
-      line-height: 26px;
-      background-color: var(--color-green-light);
-      border-radius: 20px;
-      margin-right: 8px;
-    }
-  }
-  .ant-modal-confirm-btns {
-    text-align: center;
-    .ant-btn {
-      width: 160px;
-      height: 32px;
-      color: #fff;
-      background-color: #38c89d;
-      box-shadow: 0 2px 0 rgba(31, 242, 198, 0.09);
-      &:hover {
-        color: #fff;
-        background-color: #38c89d;
-        box-shadow: 0 2px 0 rgba(31, 242, 198, 0.09);
-      }
-    }
+  .mint-table-status{
+    display: flex;
+    align-items: center;
   }
 }
 @media screen and (max-width: 768px) {
@@ -233,6 +189,7 @@
         }
       }
     }
+    
   }
 
   .account-nologin {
