--- a/src/pages/Mint/MintList/index.scss
+++ b/src/pages/Mint/MintList/index.scss
@@ -70,6 +70,7 @@
   .mint-table-status{
     display: flex;
     align-items: center;
+    cursor: pointer;
   }
 }
 @media screen and (max-width: 768px) {
