--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -599,6 +599,9 @@ input::input-placeholder {
 .ant-form-item .ant-form-item-label > label::after {
   content: "";
 }
+.ant-menu-dark.ant-menu-horizontal > .ant-menu-item-selected:hover {
+  background-color: transparent;
+}
 .nostr-assets-container {
   width: 100%;
   max-width: 1200px;
