--- a/src/pages/Mint/MintCreate/index.scss
+++ b/src/pages/Mint/MintCreate/index.scss
@@ -14,11 +14,15 @@
     }
   }
   &-form {
+    padding: 0 40px;
     &-groupInfo {
       color: var(--color-text-light);
       font-weight: bold;
       font-size: 16px;
-      padding: 30px 60px 20px;
+      padding: 30px 0px 20px;
+    }
+    .ant-form-item-label {
+      text-align: left;
     }
 
     .ant-input-number {
