--- a/src/pages/Mint/MintList/index.scss
+++ b/src/pages/Mint/MintList/index.scss
@@ -1,6 +1,6 @@
 .mint-list {
   width: 100%;
-  max-width: 1200px;
+  max-width: var(--max-width);
   margin: 0 auto;
   // padding: 0 20px;
   
@@ -74,7 +74,7 @@
 @media screen and (max-width: 768px) {
   .mint-list {
     width: 100%;
-    max-width: 1200px;
+    max-width: var(--max-width);
     margin: 0 auto;
     padding: 0 20px;
     .mint-list-head {
