--- a/src/pages/Mint/MintDetail/index.scss
+++ b/src/pages/Mint/MintDetail/index.scss
@@ -1,5 +1,5 @@
 .mint-detail-container {
-  width: 1200px;
+  width: var(--max-width);
   margin: 20px auto 0;
   padding: 20px;
   max-width: 100%;
@@ -61,7 +61,7 @@
 }
 @media screen and (max-width: 768px) {
   .mint-detail-container {
-    width: 1200px;
+    width: var(--max-width);
     margin: 0 auto;
     padding: 20px 10px;
     max-width: 100%;
