--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -583,6 +583,34 @@ input::input-placeholder {
 .nostr-unit-space {
   padding-left: 2px;
 }
+.nostrswap-modal {
+  &-title {
+    text-align: center;
+  }
+  &-scroll {
+    height: 350px;
+    overflow-y: scroll;
+    position: relative;
+  }
+  &-subtitle {
+    color: var(--color-text-light);
+    font-size: 16px;
+  }
+  &-description {
+    color: var(--color-text-dark);
+    padding-bottom: 20px;
+  }
+  &-footer {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+  }
+}
 .nostrswap-modal .ant-modal-title {
   text-align: center;
 }
