--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -598,11 +598,12 @@ input::input-placeholder {
   }
   &-description {
     color: var(--color-text-dark);
-    padding-bottom: 20px;
+    padding-bottom: 30px;
   }
   &-footer {
     text-align: center;
     position: absolute;
+    background-color: #1f1f1f;
     bottom: 0;
     left: 0;
     width: 100%;
