--- a/src/pages/Marketplace/comps/Market/index.scss
+++ b/src/pages/Marketplace/comps/Market/index.scss
@@ -8,6 +8,7 @@
   .market-buy-item{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 10px;
     .market-buy-label{
       width: 120px;
@@ -16,6 +17,7 @@
     .market-buy-value{
       flex: 1;
       text-align: left;
+      line-height: 22px;
     }
     
   }
