--- a/src/pages/Explore/explore.scss
+++ b/src/pages/Explore/explore.scss
@@ -62,7 +62,7 @@
     background-color: var(--color-layer-base);
     margin-bottom: 20px;
     border-radius: 10px;
-    padding: 0 20px;
+    // padding: 0 20px;
   }
   .explore-more {
     padding-left:10px;
