--- a/src/pages/Explore/index.scss
+++ b/src/pages/Explore/index.scss
@@ -1,11 +1,15 @@
 .market-dashborad {
-  flex:1;
+  // flex:1;
+  width: 100%;
+  max-width: var(--max-width);
+  margin: 0 auto;
   .ant-layout {
     height:100%;
   }
   .market-content {
     height:100%;
-    padding: 0 50px;
+    // padding: 0 50px;
+    
   }
   .market-explore-filters{
     .ant-form-item{
@@ -32,7 +36,7 @@
     font-weight: bold;
   }
   .dashborad-sub-menu {
-    padding: 10px 50px 0;
+    padding: 10px 0 0;
     .ant-menu-item-selected {
       background-color: transparent;
      /*  border-bottom:1px solid #fff; */
