--- a/src/pages/Marketplace/index.scss
+++ b/src/pages/Marketplace/index.scss
@@ -9,7 +9,7 @@
     flex: 1;
     max-width: var(--max-width);
     width: 100%;
-    padding: 0 24px;
+    // padding: 0 24px;
     background-color: var(--color-layer-base);
   }
   .ant-menu-dark,.ant-menu-dark>.ant-menu {
