--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,9 +3,9 @@
   max-width: var(--max-width);
   margin: 0 auto;
   background: var(--color-layer-base);
-  padding-bottom: 20px;
+  padding: 20px;
   // border-top: 1px solid rgba(255, 255, 255, 0.062745098);
-  
+
   .Footer-links {
     display: flex;
     justify-content: center;
@@ -23,17 +23,17 @@
   .footer-disclaimer {
     padding: 10px 30px;
     text-align: center;
-    a{
-      color: #D7D7D7;
+    a {
+      color: #d7d7d7;
       text-decoration: none;
       font-size: 14px;
     }
   }
-  .footer-reserved{
+  .footer-reserved {
     margin-top: 12px;
     font-size: 13px;
     text-align: center;
-    color: #AAAAAA;
+    color: #aaaaaa;
   }
 }
 @media (max-width: 800px) {
